<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TelaInicial">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <Button
                    android:id="@+id/btn_Logoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logoff" />

                <Button
                    android:id="@+id/btn_Anual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anual" />

                <Button
                    android:id="@+id/btn_Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporada" />

                <Button
                    android:id="@+id/btn_Venda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venda" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>