<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context=".TelaCadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lineUm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineDois"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/lineUm"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/edtNome"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/edtSobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/edtSobrenome"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/edtTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/edtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/edtConfSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/confsenha"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black" />

                <Button
                    android:id="@+id/btnCriarConta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="cadastro"
                    android:padding="10dp"
                    android:text="@string/criarconta"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>