<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutUm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutUm"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_Senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login" />
                <!-- android:onClick="login"-->

                <TextView
                    android:id="@+id/txtCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/naopossui"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtRedSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/recuperarsenha"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>